// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar render - box 1`] = `
<div>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterMedium ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow ouiFlexGroup--responsive ouiFlexGroup--wrap"
  >
    <div
      class="ouiFlexItem ouiSearchBar__searchHolder"
    >
      <div
        class="ouiFormControlLayout ouiFormControlLayout--fullWidth"
      >
        <div
          class="ouiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="aria-label"
            class="ouiFieldSearch ouiFieldSearch--fullWidth testClass1 testClass2"
            data-test-subj="test subject string"
            placeholder="find something..."
            type="search"
            value=""
          />
          <div
            class="ouiFormControlLayoutIcons"
          >
            <span
              class="ouiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="ouiFormControlLayoutCustomIcon__icon"
                data-ouiicon-type="search"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchBar render - no config, no query 1`] = `
<div>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterMedium ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow ouiFlexGroup--responsive ouiFlexGroup--wrap testClass1 testClass2"
  >
    <div
      class="ouiFlexItem ouiSearchBar__searchHolder"
    >
      <div
        class="ouiFormControlLayout ouiFormControlLayout--fullWidth"
      >
        <div
          class="ouiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="This is a search bar. After typing your query, hit enter to filter the results lower in the page."
            class="ouiFieldSearch ouiFieldSearch--fullWidth"
            placeholder="Search..."
            type="search"
            value=""
          />
          <div
            class="ouiFormControlLayoutIcons"
          >
            <span
              class="ouiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="ouiFormControlLayoutCustomIcon__icon"
                data-ouiicon-type="search"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchBar render - provided query, filters 1`] = `
<div>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterMedium ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow ouiFlexGroup--responsive ouiFlexGroup--wrap testClass1 testClass2"
  >
    <div
      class="ouiFlexItem ouiSearchBar__searchHolder"
    >
      <div
        class="ouiFormControlLayout ouiFormControlLayout--fullWidth"
      >
        <div
          class="ouiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="This is a search bar. After typing your query, hit enter to filter the results lower in the page."
            class="ouiFieldSearch ouiFieldSearch--fullWidth ouiFieldSearch-isClearable"
            placeholder="Search..."
            type="search"
            value="this is a query"
          />
          <div
            class="ouiFormControlLayoutIcons"
          >
            <span
              class="ouiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="ouiFormControlLayoutCustomIcon__icon"
                data-ouiicon-type="search"
              />
            </span>
          </div>
          <div
            class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
          >
            <button
              aria-label="Clear input"
              class="ouiFormControlLayoutClearButton"
              type="button"
            >
              <span
                class="ouiFormControlLayoutClearButton__icon"
                data-ouiicon-type="cross"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero ouiSearchBar__filtersHolder"
    >
      <div
        class="ouiFilterGroup"
      >
        <button
          aria-pressed="false"
          class="ouiButtonEmpty ouiButtonEmpty--text ouiFilterButton"
          type="button"
        >
          <span
            class="ouiButtonContent ouiButtonContent--iconRight ouiButtonEmpty__content"
          >
            <span
              class="ouiButtonEmpty__text"
            >
              <span
                class="ouiFilterButton__textShift"
                data-text="Open"
                title="Open"
              >
                Open
              </span>
            </span>
          </span>
        </button>
        <div
          class="ouiPopover ouiPopover--anchorDownCenter"
          id="field_value_selection_1"
        >
          <div
            class="ouiPopover__anchor"
          >
            <button
              class="ouiButtonEmpty ouiButtonEmpty--text ouiFilterButton ouiFilterButton--hasIcon"
              type="button"
            >
              <span
                class="ouiButtonContent ouiButtonContent--iconRight ouiButtonEmpty__content"
              >
                <span
                  class="ouiButtonContent__icon"
                  color="inherit"
                  data-ouiicon-type="arrowDown"
                />
                <span
                  class="ouiButtonEmpty__text"
                >
                  <span
                    class="ouiFilterButton__textShift"
                    data-text="Tag"
                    title="Tag"
                  >
                    Tag
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchBar render - tools 1`] = `
<div>
  <div
    class="ouiFlexGroup ouiFlexGroup--gutterMedium ouiFlexGroup--alignItemsCenter ouiFlexGroup--directionRow ouiFlexGroup--responsive ouiFlexGroup--wrap testClass1 testClass2"
  >
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <div>
        Left
      </div>
    </div>
    <div
      class="ouiFlexItem ouiSearchBar__searchHolder"
    >
      <div
        class="ouiFormControlLayout ouiFormControlLayout--fullWidth"
      >
        <div
          class="ouiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="This is a search bar. After typing your query, hit enter to filter the results lower in the page."
            class="ouiFieldSearch ouiFieldSearch--fullWidth"
            placeholder="Search..."
            type="search"
            value=""
          />
          <div
            class="ouiFormControlLayoutIcons"
          >
            <span
              class="ouiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="ouiFormControlLayoutCustomIcon__icon"
                data-ouiicon-type="search"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ouiFlexItem ouiFlexItem--flexGrowZero"
    >
      <div>
        Right
      </div>
    </div>
  </div>
</div>
`;
